--- a/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
+++ b/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1F2HLna2A3FnjXmYHnQi6",
+      "authorship_tag": "ABX9TyN5KSCOgMhkhCSAZDxMIbKh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,7 +380,9 @@
       "source": [
         "## Praktischer Teil\n",
         "\n",
-        "Im ersten Teil wird eine Klass erstellt, mit dem sich für einen Hammincode, alle Notwendigen funktionen wie das Generieren einer Generator-Matrix und einer Prüfmatrix erstellen lässt.\n"
+        "Im ersten Teil wird eine Klass erstellt, mit dem sich für einen Hammincode, alle Notwendigen funktionen wie das Generieren einer Generator-Matrix und einer Prüfmatrix erstellen lässt.\n",
+        "\n",
+        "Der zweite Teil stellt das Hauptprogramm dar, in dem die Berechnungen durchgeführt werden.\n"
       ],
       "metadata": {
         "id": "UJrXgSuLTwHZ"
@@ -389,7 +391,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Klasse HammingCode\n"
+        "### Klasse HammingCode\n",
+        "\n",
+        "Die Klasse `HammingCode` besteht zum einen aus einem Konstruktor `__init__` in dem eine Instanz der Klasse (Objekt) mit den gegeben Angaben erzeugt wird. Der Konstruktor akzeptiert einen Parameter `k` mit dem die Anzahl Paritätsbits für das instanzierte `HemmingCode`-Objekt initialisiert wird. Bei der Initialisierung werden automatisch die Generatormatrix mit der Funktion `__construct_gen_matrix`, die Prüfmatrix mit der Funktion `__construct_chk_matrix` und die Decodierungs-Matrix mit der Funktion `__construct_encode_matrix()` erzeugt."
       ],
       "metadata": {
         "id": "WTYsmZmhUW5K"
@@ -400,12 +404,12 @@
       "source": [
         "class HammingCode:\n",
         "    \"\"\"\n",
-        "    Class to work with hamming codes\n",
+        "    Klasse zur verarbeitung von Hamming-Codes\n",
         "    \"\"\"\n",
         "    def __init__(self, k):\n",
         "        \"\"\"\n",
-        "        Initiate HammingCode instance\n",
-        "        :param k:\n",
+        "        Initialisierung einer HammingCode-Instanz\n",
+        "        :param k: Anzahl der Paritätsbits im HammingCode\n",
         "        \"\"\"\n",
         "        self.k = k  # number of parity bits\n",
         "        self.N = 2**k - 1  # code length\n",
@@ -416,7 +420,7 @@
         "\n",
         "    def __construct_gen_matrix(self):\n",
         "        \"\"\"\n",
-        "        Construction of the generator matrix for the Hamming-Code\n",
+        "        Konstruktion der Generator-Matrix für die HammingCode-Instanz\n",
         "        :return: none\n",
         "        \"\"\"\n",
         "        id_matrix = np.identity(self.p)\n",
@@ -424,7 +428,7 @@
         "\n",
         "    def __construct_chk_matrix(self):\n",
         "        \"\"\"\n",
-        "        Construction of the check matrix for the Hamming-Code\n",
+        "        Konstruktion der Prüfmatrix für die HammingCode-Instanz\n",
         "        :return: none\n",
         "        \"\"\"\n",
         "        id_matrix = np.identity(self.k)\n",
@@ -448,15 +452,28 @@
         "        self.chk_matrix = np.hstack((self.parity_matrix, id_matrix))\n",
         "\n",
         "    def __construct_encode_matrix(self):\n",
+        "        \"\"\"\n",
+        "        Konstruktion der Decodierungs-Matrix fir die HammingCode-Instanz\n",
+        "        :return: none\n",
+        "        \"\"\"\n",
         "        id_matrix = np.identity(self.p)\n",
         "        null_matrix = np.zeros((self.p, self.k))\n",
         "        self.encode_matrix = np.hstack((null_matrix, id_matrix))\n",
         "\n",
         "    @staticmethod\n",
         "    def __to_array(input_string):\n",
+        "        \"\"\"\n",
+        "        Methode zur Rückgabe eines Integers aus für jedes Zeichen eines Strings\n",
+        "        :param input_string: Eingabe-String\n",
+        "        :return: Integer\n",
+        "        \"\"\"\n",
         "        return [int(x) for x in str(input_string)]\n",
         "\n",
         "    def get_length(self):\n",
+        "        \"\"\"\n",
+        "        Methode zur Rückgabe der Code-Länge\n",
+        "        :return: Code-Länge als Integer\n",
+        "        \"\"\"\n",
         "        return self.N\n",
         "\n",
         "    def get_payload(self):\n",
@@ -475,6 +492,13 @@
         "        :return: check matrix\n",
         "        \"\"\"\n",
         "        return self.chk_matrix\n",
+        "    \n",
+        "    def get_encoding_matrix(self):\n",
+        "        \"\"\"\n",
+        "        Metode zur rückgabe der Entcodierungs-Matrix\n",
+        "        :return: encoding matrix\n",
+        "        \"\"\"\n",
+        "        return self.encode_matrix\n",
         "\n",
         "    def encode(self, word):\n",
         "        \"\"\"\n",
@@ -535,7 +559,7 @@
       "metadata": {
         "id": "RVG4sS68T-af"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -551,6 +575,8 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "\n",
         "def main():\n",
         "    k = 3\n",
         "    hamming = HammingCode(k)\n",
@@ -558,6 +584,7 @@
         "    print(\"Payload: \", hamming.get_payload())\n",
         "    print(\"Generator Matrix: \", hamming.get_generator_matrix())\n",
         "    print(\"Check Matrix: \", hamming.get_check_matrix())\n",
+        "    print(\"Encoding Matrix: \", hamming.get_encoding_matrix())\n",
         "\n",
         "    for w in range(hamming.get_payload()**2):\n",
         "        encode_decode(hamming, w)\n",
@@ -590,115 +617,26 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 345
         },
         "id": "XEzSX5C3UhcM",
-        "outputId": "c14c2d89-7596-4fa6-f144-de25b9d67b20"
+        "outputId": "16d5c2dd-5b2c-422d-abba-ce91163f3a64"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Length:  7\n",
-            "Payload:  4\n",
-            "Generator Matrix:  [[1. 0. 0. 0.]\n",
-            " [0. 1. 0. 0.]\n",
-            " [0. 0. 1. 0.]\n",
-            " [0. 0. 0. 1.]\n",
-            " [1. 1. 0. 1.]\n",
-            " [1. 0. 1. 1.]\n",
-            " [0. 1. 1. 1.]]\n",
-            "Check Matrix:  [[1. 1. 0. 1. 1. 0. 0.]\n",
-            " [1. 0. 1. 1. 0. 1. 0.]\n",
-            " [0. 1. 1. 1. 0. 0. 1.]]\n",
-            "Word:  0\n",
-            "Encoded Word:  0000000\n",
-            "Error in bit:  7\n",
-            "Check Result:  111\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  1\n",
-            "Encoded Word:  0001111\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  2\n",
-            "Encoded Word:  0010011\n",
-            "Error in bit:  4\n",
-            "Check Result:  100\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  3\n",
-            "Encoded Word:  0011100\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  4\n",
-            "Encoded Word:  0100101\n",
-            "Error in bit:  2\n",
-            "Check Result:  010\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  5\n",
-            "Encoded Word:  0101010\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  6\n",
-            "Encoded Word:  0110110\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  7\n",
-            "Encoded Word:  0111001\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  8\n",
-            "Encoded Word:  1000110\n",
-            "Error in bit:  1\n",
-            "Check Result:  001\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  9\n",
-            "Encoded Word:  1001001\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  10\n",
-            "Encoded Word:  1010101\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  11\n",
-            "Encoded Word:  1011010\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  12\n",
-            "Encoded Word:  1100011\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  13\n",
-            "Encoded Word:  1101100\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  14\n",
-            "Encoded Word:  1110000\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Word:  15\n",
-            "Encoded Word:  1111111\n",
-            "Error in bit:  0\n",
-            "Check Result:  000\n",
-            "Decoded Word:  [1, 1, 1, 1]\n",
-            "Hamming-Code with error\n",
-            "Codeword with error:  0111011\n",
-            "Error in bit:  2\n",
-            "Hamming-Code with error\n",
-            "Codeword with error:  1100011\n",
-            "Error in bit:  0\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-598a93864576>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-3-598a93864576>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mhamming\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHammingCode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Length: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhamming\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Payload: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhamming\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_payload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-6448b845fc27>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m  \u001b[0;31m# code length\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m  \u001b[0;31m# payload bits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__construct_chk_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# construct the check matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__construct_gen_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# construct the generator matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__construct_encode_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# construct the encode matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-6448b845fc27>\u001b[0m in \u001b[0;36m__construct_chk_matrix\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0;32mreturn\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \"\"\"\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mid_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midentity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchk_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mtmp_check_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
           ]
         }
       ]
