--- a/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
+++ b/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
@@ -559,7 +559,7 @@
       "metadata": {
         "id": "RVG4sS68T-af"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -617,26 +617,119 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 345
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XEzSX5C3UhcM",
-        "outputId": "16d5c2dd-5b2c-422d-abba-ce91163f3a64"
+        "outputId": "39045117-27ef-48c9-d183-2913d1f3274c"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-598a93864576>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-3-598a93864576>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mhamming\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHammingCode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Length: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhamming\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Payload: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhamming\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_payload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-2-6448b845fc27>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m  \u001b[0;31m# code length\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m  \u001b[0;31m# payload bits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__construct_chk_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# construct the check matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__construct_gen_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# construct the generator matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__construct_encode_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# construct the encode matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-2-6448b845fc27>\u001b[0m in \u001b[0;36m__construct_chk_matrix\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0;32mreturn\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \"\"\"\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mid_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midentity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchk_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mtmp_check_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Length:  7\n",
+            "Payload:  4\n",
+            "Generator Matrix:  [[1. 0. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [1. 1. 0. 1.]\n",
+            " [1. 0. 1. 1.]\n",
+            " [0. 1. 1. 1.]]\n",
+            "Check Matrix:  [[1. 1. 0. 1. 1. 0. 0.]\n",
+            " [1. 0. 1. 1. 0. 1. 0.]\n",
+            " [0. 1. 1. 1. 0. 0. 1.]]\n",
+            "Encoding Matrix:  [[0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1.]]\n",
+            "Word:  0\n",
+            "Encoded Word:  0000000\n",
+            "Error in bit:  7\n",
+            "Check Result:  111\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  1\n",
+            "Encoded Word:  0001111\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  2\n",
+            "Encoded Word:  0010011\n",
+            "Error in bit:  4\n",
+            "Check Result:  100\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  3\n",
+            "Encoded Word:  0011100\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  4\n",
+            "Encoded Word:  0100101\n",
+            "Error in bit:  2\n",
+            "Check Result:  010\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  5\n",
+            "Encoded Word:  0101010\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  6\n",
+            "Encoded Word:  0110110\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  7\n",
+            "Encoded Word:  0111001\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  8\n",
+            "Encoded Word:  1000110\n",
+            "Error in bit:  1\n",
+            "Check Result:  001\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  9\n",
+            "Encoded Word:  1001001\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  10\n",
+            "Encoded Word:  1010101\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  11\n",
+            "Encoded Word:  1011010\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  12\n",
+            "Encoded Word:  1100011\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  13\n",
+            "Encoded Word:  1101100\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  14\n",
+            "Encoded Word:  1110000\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Word:  15\n",
+            "Encoded Word:  1111111\n",
+            "Error in bit:  0\n",
+            "Check Result:  000\n",
+            "Decoded Word:  [1, 1, 1, 1]\n",
+            "Hamming-Code with error\n",
+            "Codeword with error:  0111011\n",
+            "Error in bit:  2\n",
+            "Hamming-Code with error\n",
+            "Codeword with error:  1100011\n",
+            "Error in bit:  0\n"
           ]
         }
       ]
